Test/dafny0/QuantificationResolution.dfy.expect
QuantificationResolution.dfy(9,43): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(10,31): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(11,24): Error: range of comprehension must be of type bool (instead got string)
QuantificationResolution.dfy(15,43): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(16,31): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(17,24): Error: range of comprehension must be of type bool (instead got string)
QuantificationResolution.dfy(21,46): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(22,34): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(23,27): Error: range of quantifier must be of type bool (instead got string)
QuantificationResolution.dfy(27,46): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(28,34): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(29,27): Error: range of quantifier must be of type bool (instead got string)
QuantificationResolution.dfy(33,37): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(34,25): Error: range of quantified variable must be of type bool (instead got string)
QuantificationResolution.dfy(35,18): Error: range restriction in forall statement must be of type bool (instead got string)
QuantificationResolution.dfy(7,22): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type ?, or a map with domain ? (instead got int)
QuantificationResolution.dfy(8,32): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type ?, or a map with domain ? (instead got int)
QuantificationResolution.dfy(13,22): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type int, or a map with domain int (instead got int)
QuantificationResolution.dfy(14,32): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type ?, or a map with domain ? (instead got int)
QuantificationResolution.dfy(19,25): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type int, or a map with domain int (instead got int)
QuantificationResolution.dfy(20,35): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type ?, or a map with domain ? (instead got int)
QuantificationResolution.dfy(25,25): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type int, or a map with domain int (instead got int)
QuantificationResolution.dfy(26,35): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type ?, or a map with domain ? (instead got int)
QuantificationResolution.dfy(31,16): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type ?, or a map with domain ? (instead got int)
QuantificationResolution.dfy(32,26): Error: domain of quantified variable must be a set, multiset, or sequence with elements of type ?, or a map with domain ? (instead got int)
25 resolution/type errors detected in QuantificationResolution.dfy
